push base not dev

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -39,4 +39,5 @@ jobs:
           context: .
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
+          target: base
           push: true
