--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,6 +24,22 @@ jobs:
       run: |
         make format check=true
 
+  types:
+    name: Types
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Build docker images
+      run: |
+        docker compose build dev
+
+    - name: Check types
+      run: |
+        make check-types
+
   tests:
     name: Tests
     runs-on: ubuntu-latest
